--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,7 @@
 
 /* Colors*/
 :root {
-    
     --footer: #23272a ;
-    --footer-med-content: #f08080 ;
-    --footer-small-content: #20b2aa ;
-    --content: #7fffd4;
     --gray:#e5e5e5;
 }
 
@@ -152,12 +148,11 @@ p{
 .section1-img, .section3-img{
     height: 400px;
     display: flex;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 
 .section1-content, .section3-content{
     display: flex;
-    justify-content: center;
     flex-direction: column;
     width: 300px;
     height: 400px;
@@ -178,16 +173,16 @@ p{
 .section2-img{
     height: 400px;
     display: flex;
-    padding: 0 0px;
+    padding: 0px 10px;
 }
 
 .section2-content{
     display: flex;
-    justify-content: center;
     flex-direction: column;
     width: 400px;
     height: 400px;
-    margin-top: 30px;
+    margin-top: 0px;
+    padding: 20px;
 }
 
 
